# prumo

./: .env  .env.example  .gitignore  CONTRIBUTING.md  README.md  add_license_header.py  pyproject.toml  pytest.ini
.agent/rules/: python-async.md  python-core.md  python-errors.md  python-performance.md  python-security.md  python-structure.md  python-testing.md  python-types.md
.github/workflows/: reingest-stellar-docs.yml
alembic/: env.py
alembic/versions/: 08a93ce9d65b_add_knowledge_documents.py  28082673658e_add_unique_constraint_projects_name.py  756b12e9d829_cookbook_recipe_models.py  a1b2c3d4e5f6_prumo_lite_simplify.py  b7f7c9a2d1e4_add_source_url_to_knowledge_documents.py  c3f8a2b1d4e7_add_graph_tables.py  d524a3e08769_fix_embedding_dimension_768_to_1024.py  e7bacc3f20d5_add_is_valid_to_graph_and_prompts_table.py  fd5fdca1aacb_initial_schema_en.py
app/: cli.py  composition.py  config.py  database.py  logger.py  main.py
app/adapters/: __init__.py  remote_graph_adapter.py  stellar_crawler.py
app/application/: use_cases.py
app/core/: exceptions.py
app/domain/: __init__.py  entities.py  ports.py
app/infrastructure/: __init__.py  conversation_repository.py  knowledge_workflows.py  llm_external.py  repositories.py  uow_sqlalchemy.py
app/interfaces/: storage.py
app/models/: __init__.py  business_rule.py  conversation.py  cookbook.py  graph.py  knowledge.py  plan.py  project.py  prompt.py
app/ports/: __init__.py  graph_port.py
app/routers/: __init__.py  business.py  chat.py  cookbooks.py  ingest.py  knowledge.py  projects.py  prompts.py  test_ui.py
app/schemas/: business_rule.py  chat.py  cookbook.py  graph.py  knowledge.py  project.py  prompt_generator.py
app/services/: __init__.py  business_rule.py  chat_service.py  codegen.py  community_detector.py  cookbook_pipeline.py  cookbook_service.py  document_processor.py  embedding_service.py  file_classifier.py  gemini.py  gemini_client.py  graph_extractor.py  graph_query_service.py  graph_services.py  knowledge_gemini.py  knowledge_orchestrator.py  knowledge_query_service.py  llm_gateway.py  ollama_client.py  project.py  prompt_generator.py  recipe_extractor.py  sanitizer.py
app/utils/: tool_converter.py
graph_worker/: Dockerfile  main.py  pyproject.toml
prumo/: __init__.py  cli.py  crawler.py  errors.py  exporter.py  models.py
prumo/crawlers/: __init__.py  _html.py  base.py  github.py  (+2 more)
scripts/: check_ollama.py  ingest_stellar_docs.py  test_pypdf.py  test_workflow.py
templates/: index.html  snippets.html
tests/: conftest.py  test_api_ingest.py  test_application_use_cases.py  test_community_detector.py  test_crawler.py  test_exporter.py  test_file_classifier.py  test_github_crawler.py  test_graph_schemas.py  test_knowledge_query_service.py  test_playwright_crawler.py  test_prompt_generator.py  test_remote_graph_adapter.py  test_schemas.py  test_static_crawler.py  test_stellar_chat.py  test_stellar_crawler.py
(+10 files in other folders)
