[project]
name = "prumo"
version = "0.1.0"
description = "CLI that converts documentation sites into llms.txt files for AI agents"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "typer>=0.12",
  "rich>=13",
  "google-generativeai>=0.8",
  "anthropic>=0.30",
]

[project.scripts]
prumo = "prumo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "respx",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
