[project]
name = "prumo"
version = "0.1.2"
description = "Convert any docs site into llms.md for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "markdownify>=0.13",
  "typer>=0.12",
  "rich>=13",
  "python-dotenv>=1.0",
  "google-genai>=0.8",
  "anthropic>=0.30",
]

[project.optional-dependencies]
js = [
  "playwright>=1.40",
]

[project.scripts]
prumo = "prumo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "respx",
]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]